--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "livewire/livewire": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "nazir/go2hi": "^1.0",
         "pusher/pusher-php-server": "^7.0",
         "realrashid/sweet-alert": "^4.1"
