--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
-        "doctrine/dbal": "^3.4",
-        "fruitcake/laravel-cors": "^2.0",
+        "doctrine/dbal": "^3.0",
+        "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
         "jantinnerezo/livewire-alert": "^2.2",
@@ -23,15 +23,15 @@
         "maatwebsite/excel": "^3.1",
         "nazir/go2hi": "^1.0",
         "pusher/pusher-php-server": "^7.0",
-        "realrashid/sweet-alert": "^5.0"
+        "realrashid/sweet-alert": "^6.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.3.3",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
@@ -68,6 +68,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
