--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6",
-        "laravel-vite-plugin": "^0.6.0",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
-        "vite": "^3.0.2"
+        "sass-loader": "^11.0.1"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
-        "alpinejs": "^3.10.5",
+        "alpinejs": "^3.11.1",
         "animate.css": "^4.1.1",
         "bootstrap-icons": "^1.5.0",
         "icheck-bootstrap": "^3.0.1",
