--- a/package.json
+++ b/package.json
@@ -13,23 +13,28 @@
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6",
+        "laravel-echo": "^1.15.0",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
+        "pusher-js": "^8.0.1",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "webpack-bundle-analyzer": "^4.8.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
         "alpinejs": "^3.11.1",
         "animate.css": "^4.1.1",
         "bootstrap-icons": "^1.5.0",
+        "dotenv": "^16.0.3",
         "icheck-bootstrap": "^3.0.1",
         "js-datepicker": "^5.18.0",
         "lightgallery": "^2.7.1",
         "moment": "^2.29.1",
         "overlayscrollbars": "^1.13.1",
-        "pace-js": "^1.2.4"
+        "pace-js": "^1.2.4",
+        "path-browserify": "^1.0.1"
     }
 }
